adicionar  configuraçoes